adding profiling task